--- a/templates/text_to_speech.html
+++ b/templates/text_to_speech.html
@@ -126,9 +126,9 @@ https://templatemo.com/tm-505-stacked
                       <div class="row">
                         <div class="col-md-8">
                           <div class="contat-form">
-                            <form id="contact" action="{{ url_for('report_page_2') }}" method="get">
+                            <form id="contact" action="{{ url_for('report_page_2') }}" method="post">
                               <fieldset>
-                                <select name="language" class="form-control" id="name" placeholder="Select language" required="">
+                                <select name="language" class="form-control" id="language" placeholder="Select language" required="">
                                   <option value="en-us">English</option>
                                   <option value="hi">Hindi</option>
                                   <option value="bn">Bengali</option>
